--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,10 @@
 Source: python-blitzortung
 Priority: extra
 Maintainer: Andreas Würl <blitzortung@tryb.de>
-Build-Depends: debhelper (>= 7.0.50~)
+Build-Depends: debhelper (>= 7.0.50~), python, python-setuptools, python-tz, python-pyproj
 Standards-Version: 3.8.4
 Section: libs
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Git: git://git.debian.org/collab-maint/python-blitzortung.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/python-blitzortung.git;a=summary
+Homepage: http://launchpad.net/blitzortung-python
 
 Package: python-blitzortung
 Section: libs
