--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install libblas-dev liblapack-dev
+  - sudo apt-get install libblas-dev liblapack-dev gfortran
   - pip list
 
 install:
