--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install libblas-dev liblapack-dev gfortran
+  - pip uninstall -y numpy ||true
   - pip list
 
 install:
