--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-nose==1.3.1
-mock==1.0.1
-coverage==3.7.1
-PyHamcrest==1.8.0
-injector==0.8.0
-lockfile==0.9.1
-requests==2.2.1
-pytz==2014.2
-dateutils==0.6.6
-python-dateutil==2.2
-psycopg2==2.5.2
-pyproj==1.9.3
-Shapely==1.3.0
-numpy==1.8.1
-pandas==0.13.1
-statsd==2.1.2
+nose>=1.3.1
+mock>=1.0.1
+coverage>=3.7.1
+PyHamcrest>=1.8.0
+injector>=0.8.0
+lockfile>=0.9.1
+requests>=2.2.1
+pytz>=2014.2
+dateutils>=0.6.6
+python-dateutil>=2.2
+psycopg2>=2.5.2
+pyproj>=1.9.3
+Shapely>=1.3.0
+numpy>=1.8.1
+pandas>=0.13.1
+statsd>=2.1.2
+bitarray>=0.8.1
