--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ install:
   - pip install --upgrade setuptools
   - pip list
   - pip install -r requirements.txt
+  - pip install twisted
   - pip list
 
 script:
