--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,23 @@ before_install:
   - pip list
 
 install:
-  - pip install --upgrade pip
-  - pip install --upgrade setuptools
-  - pip list
-  - pip install --upgrade numpy
-  - pip install --upgrade scipy
+  # Install conda
+  - sudo pip install conda
+  # install deps
+  - sudo conda init
+  - sudo conda update conda --yes
+  - deps='pip numpy pandas scipy twisted requests psycopg2 nose mock coverage numpydoc sphinx'
+  - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
+  - export PATH=$HOME/py/bin:$PATH
+
+  #- pip install --upgrade pip
+  #- pip install --upgrade setuptools
+  #- pip list
+  #- pip install --upgrade numpy
+  #-# pip install --upgrade scipy
   - pip install -r requirements.txt
-  - pip install twisted
-  - pip list
+  #- pip install twisted
+  #- pip list
 
 script:
   - nosetests
