--- a/.travis.yml
+++ b/.travis.yml
@@ -11,21 +11,24 @@ before_install:
   - pip list
 
 install:
+  #
+  - sudo pip install --upgrade pip
+  - sudo pip install --upgrade setuptools
   # Install conda
   - sudo pip install conda
   # install deps
   - sudo conda init
   - sudo conda update conda --yes
-  - deps='pip numpy pandas scipy twisted requests psycopg2 nose mock coverage numpydoc sphinx'
+  - deps='pip numpy pandas scipy twisted requests nose mock coverage numpydoc sphinx'
   - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
   - export PATH=$HOME/py/bin:$PATH
 
-  #- pip install --upgrade pip
   #- pip install --upgrade setuptools
   #- pip list
   #- pip install --upgrade numpy
   #-# pip install --upgrade scipy
   - pip install -r requirements.txt
+  - pip install --upgrade fastcluster
   #- pip install twisted
   #- pip list
 
