--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 nose>=1.3.1
 mock>=1.0.1
 coverage>=3.7.1
+cython>=0.19.0
 PyHamcrest>=1.8.0
 injector>=0.8.0
 lockfile>=0.9.1
@@ -14,4 +15,3 @@ Shapely>=1.3.0
 numpy>=1.8.1
 pandas>=0.13.1
 statsd>=2.1.2
-bitarray>=0.8.1
