--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   # install deps
   - sudo conda init
   - sudo conda update conda --yes
-  - deps='pip numpy pandas scipy requests nose numpydoc sphinx'
+  - deps='pip numpy pandas scipy requests nose sphinx'
   - conda create -p $HOME/py --yes $deps "python=$TRAVIS_PYTHON_VERSION"
   - export PATH=$HOME/py/bin:$PATH
 
