migrate to properties

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,9 @@ install:
 
   # install deps
   - pip install -r requirements.txt
-  - pip install --upgrade fastcluster
-  - pip install --upgrade twisted
-  - pip install --upgrade geographiclib
+  - pip install fastcluster
+  - pip install twisted
+  - pip install geographiclib
   - python setup.py build_ext --inplace
   - pip list
 
