--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - pip install fastcluster
   - pip install twisted
   - pip install geographiclib
+  - pip install python-coveralls
   - python setup.py build_ext --inplace
   - pip list
 
