--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-nose>=1.3.1
-mock>=1.0.1
-coverage>=3.7.1
-cython>=0.19.0
-PyHamcrest>=1.8.0
-assertpy>=0.8.0
+cython>=0.26.1
 injector>=0.8.0
-lockfile>=0.9.1
-requests>=2.2.1
-pytz>=2014.2
-psycopg2>=2.5.2
-pyproj>=1.9.3
-Shapely>=1.3.0
-statsd>=2.1.2
-six>=1.9.0
+lockfile==0.12.2
+requests==2.18.4
+pytz==2018.3
+psycopg2==2.8.3
+pyproj>=1.9.5.1
+Shapely==1.6.4
+statsd==3.2.1
+twisted==17.9.0
