--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 install:
   # install deps
   - pip install -r requirements.txt
-  - pip install pytest-cov mock assertpy python-coveralls
+  - pip install python-coveralls
   - pip install fastcluster
   - pip list
 
