--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ injector>=0.8.0
 lockfile==0.12.2
 requests==2.20.0
 pytz==2018.3
-psycopg2==2.7.4
+#psycopg2==2.7.4
 pyproj>=1.9.5.1
 Shapely==1.6.4
 statsd==3.2.1
 twisted==19.7.0
+pytest-cov
+mock
+assertpy
