--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: python
 
 python:
-    - "3.5"
-    - "3.6"
-    - "3.7"
+  - "3.7"
+  - "3.8"
+  - "3.9"
 
 install:
+  - sudo apt install -y postgresql-server-dev-9.6
   # install deps
+  # temp fix for https://github.com/pypa/setuptools/issues/3293
+  - pip install --upgrade importlib-metadata>=0.21
   - pip install -r requirements.txt
   - pip install python-coveralls
   - pip install fastcluster
