--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [nosetests]
-with-coverage=
-cover-package=blitzortung
-cover-tests=
-cover-erase=
-cover-html=
-cover-html-dir=coverage_report
-with-xunit=
+with-coverage =
+cover-package = blitzortung
+cover-tests =
+cover-erase =
+cover-html =
+cover-html-dir = coverage_report
+with-xunit =
