--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run Tests
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_tests.txt
+          pip install --use-pep517 -r requirements_tests.txt
           pytest --cov blitzortung --cov-report xml tests
       - name: Build
         run: |
