--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
 license = { file = 'LICENSE' }
 requires-python = ">=3.7"
 dependencies = [
-#    'backports.zoneinfo',
+    'backports.zoneinfo;python_version <= "3.8"',
     'injector',
     'requests',
     'lockfile',
