--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Run Tests
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install -U pip pip-tools
+          ./update_requirements
           pip install --use-pep517 -r requirements_tests.txt
           pytest --cov blitzortung --cov-report xml tests
       - name: Build
