--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
 sonar.projectKey=wuan_bo-python_AYVO9zGlU_dM7amWRinB
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.xunit.reportPath=junit.xml
 sonar.python.version=3
+sonar.sources=blitzortung/
+sonar.tests=tests/
