--- a/requirements.txt
+++ b/requirements.txt
@@ -4,49 +4,51 @@
 #
 #    pip-compile --output-file=requirements.txt pyproject.toml
 #
-attrs==21.4.0
+attrs==22.2.0
     # via
     #   automat
     #   twisted
-automat==20.2.0
+automat==22.10.0
     # via twisted
-certifi==2022.6.15
+certifi==2022.12.7
     # via
     #   pyproj
     #   requests
-charset-normalizer==2.1.0
+charset-normalizer==2.1.1
     # via requests
 constantly==15.1.0
     # via twisted
 hyperlink==21.0.0
     # via twisted
-idna==3.3
+idna==3.4
     # via
     #   hyperlink
     #   requests
-incremental==21.3.0
+incremental==22.10.0
     # via twisted
 injector==0.20.1
     # via blitzortung (pyproject.toml)
 lockfile==0.12.2
     # via blitzortung (pyproject.toml)
-psycopg2==2.9.3
+numpy==1.24.1
+    # via shapely
+psycopg2==2.9.5
     # via blitzortung (pyproject.toml)
-pyproj==3.2.1
+pyproj==3.4.1
     # via blitzortung (pyproject.toml)
 requests==2.28.1
     # via blitzortung (pyproject.toml)
-shapely==1.8.2
+shapely==2.0.0
     # via blitzortung (pyproject.toml)
 six==1.16.0
     # via automat
-twisted==22.4.0
+twisted==22.10.0
     # via blitzortung (pyproject.toml)
-typing-extensions==4.3.0
+typing-extensions==4.4.0
     # via twisted
-urllib3==1.26.10
+urllib3==1.26.13
     # via requests
-zope-interface==5.4.0
+zope-interface==5.5.2
     # via twisted
 
 # The following packages are considered to be unsafe in a requirements file:
