--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,30 +8,40 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ "3.9", "3.10", "3.11", "3.12" ]
+        poetry-version: [ "1.2.2", "1.7.1" ]
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Run image
+        uses: abatilo/actions-poetry@v3
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
+
+      - name: Setup environment
+        run: poetry install
+
       - name: Run Tests
         run: |
-          python -m pip install -U pip pip-tools
-          ./update_requirements
-          pip install --use-pep517 -r requirements_tests.txt
-          pytest --cov blitzortung --cov-report xml --cov-report term --junitxml=junit.xml tests
+          poetry run pytest --cov blitzortung --cov-report xml --cov-report term --junitxml=junit.xml tests
+
       - name: Build
         run: |
-          pip install -q build
-          python -m build -s
+          poetry build
+
       - uses: sonarsource/sonarqube-scan-action@v3
-        if: matrix.python-version == '3.10'
+        if: matrix.python-version == '3.10' && matrix.os == 'ubuntu-22.04' && matrix.poetry-version == '1.7.1'
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
