--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,59 @@
-[project]
+[tool.poetry]
 name = 'blitzortung'
-version = '1.8.0'
+version = '1.9.0'
 description = 'blitzortung.org python modules'
-authors = [
-    { name = 'Andreas Wuerl', email = 'blitzortung@tryb.de' }
-]
+authors = ["Andreas Würl <andi@tryb.de>"]
 
-license = { file = 'LICENSE' }
-requires-python = ">=3.9"
-dependencies = [
-    'injector',
-    'requests',
-    'fasteners',
-    'shapely',
-    'pyproj',
-    'twisted',
-    'psycopg2'
-]
-classifiers = [
-    'Development Status :: 4 - Beta',
-    'Environment :: Console',
-    'Environment :: Plugins',
-    'Intended Audience :: Developers',
-    'Intended Audience :: Education',
-    'Intended Audience :: Science/Research',
-    'License :: OSI Approved :: Apache Software License',
-    'Natural Language :: English',
-    'Operating System :: OS Independent',
-    'Topic :: Scientific/Engineering :: Atmospheric Science',
-    'Topic :: Scientific/Engineering :: GIS',
-    'Topic :: Software Development :: Libraries :: Python Modules',
-    'Topic :: Utilities',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
-]
+license = "Apache-2.0"
 
-[tool.setuptools]
-packages = ["blitzortung"]
+#dependencies = [
+#    'injector',
+#    'requests',
+#    'fasteners',
+#    'shapely',
+#    'pyproj',
+#    'twisted',
+#    'psycopg2'
+#]
+#classifiers = [
+#    'Development Status :: 4 - Beta',
+#    'Environment :: Console',
+#    'Environment :: Plugins',
+#    'Intended Audience :: Developers',
+#    'Intended Audience :: Education',
+#    'Intended Audience :: Science/Research',
+#    'License :: OSI Approved :: Apache Software License',
+#    'Natural Language :: English',
+#    'Operating System :: OS Independent',
+#    'Topic :: Scientific/Engineering :: Atmospheric Science',
+#    'Topic :: Scientific/Engineering :: GIS',
+#    'Topic :: Software Development :: Libraries :: Python Modules',
+#    'Topic :: Utilities',
+#    'Programming Language :: Python :: 3',
+#    'Programming Language :: Python :: 3.9',
+#    'Programming Language :: Python :: 3.10',
+#    'Programming Language :: Python :: 3.11',
+#    'Programming Language :: Python :: 3.12',
+#]
+
+[tool.poetry.dependencies]
+python = "^3.9"
+twisted = "^24.7.0"
+requests = "^2.32.3"
+fasteners = "^0.19"
+shapely = "^2.0.6"
+pyproj = "^3.6.1"
+psycopg2 = "^2.9.9"
+
+[tool.poetry.group.dev.dependencies]
+assertpy = "^1.1"
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
+pytest-benchmark = "^4.0.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [project.optional-dependencies]
 tests = [
