--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,6 @@ authors = ["Andreas Würl <andi@tryb.de>"]
 
 license = "Apache-2.0"
 
-#dependencies = [
-#    'injector',
-#    'requests',
-#    'fasteners',
-#    'shapely',
-#    'pyproj',
-#    'twisted',
-#    'psycopg2'
-#]
 #classifiers = [
 #    'Development Status :: 4 - Beta',
 #    'Environment :: Console',
@@ -44,6 +35,7 @@ fasteners = "^0.19"
 shapely = "^2.0.6"
 pyproj = "^3.6.1"
 psycopg2 = "^2.9.9"
+injector = "^0.22.0"
 
 [tool.poetry.group.dev.dependencies]
 assertpy = "^1.1"
