--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ assertpy = "^1.1"
 pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
 pytest-benchmark = "^4.0.0"
+mock = "^5.1.0"
 
 [build-system]
 requires = ["poetry-core"]
