--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
-sonar.projectKey=wuan_bo-python_4f4dd0cd-b83d-407b-9e5c-2c98a6ca3851
+sonar.projectKey=wuan_bo-python
+sonar.organization=wuan
+
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.xunit.reportPath=junit.xml
 sonar.python.version=3
