--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,14 +40,9 @@ jobs:
         run: |
           poetry build
 
-      - uses: sonarsource/sonarqube-scan-action@v3
+      - name: SonarCloud Scan
         if: matrix.python-version == '3.10' && matrix.poetry-version == '1.7.1'
+        uses: SonarSource/sonarcloud-github-action@master
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      # - uses: sonarsource/sonarqube-quality-gate-action@master
-      #   timeout-minutes: 5
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
