--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: SonarCloud Scan
         if: matrix.python-version == '3.10' && matrix.poetry-version == '1.7.1'
-        uses: SonarSource/sonarqube-scan-action@02ef91109b2d589e757aefcfb2854c2783fd7b19 # master
+        uses: SonarSource/sonarqube-scan-action@v4.2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
