--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.10", "3.11", "3.12", "3.13" ]
-        poetry-version: [ "1.8.3", "2.0.1" ]
     runs-on: ubuntu-latest
     steps:
       - name: Harden Runner
@@ -38,7 +37,7 @@ jobs:
       - name: Run image
         uses: abatilo/actions-poetry@0dd19c9498c3dc8728967849d0d2eae428a8a3d8 # v4
         with:
-          poetry-version: ${{ matrix.poetry-version }}
+          poetry-version: '2.0.1'
 
       - name: Setup environment
         run: poetry install
