--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,59 +5,26 @@ description = 'blitzortung.org python modules'
 authors = [
     {name = "Andreas Würl",email = "andi@tryb.de"}
 ]
-
 license = "Apache-2.0"
-
-#classifiers = [
-#    'Development Status :: 4 - Beta',
-#    'Environment :: Console',
-#    'Environment :: Plugins',
-#    'Intended Audience :: Developers',
-#    'Intended Audience :: Education',
-#    'Intended Audience :: Science/Research',
-#    'License :: OSI Approved :: Apache Software License',
-#    'Natural Language :: English',
-#    'Operating System :: OS Independent',
-#    'Topic :: Scientific/Engineering :: Atmospheric Science',
-#    'Topic :: Scientific/Engineering :: GIS',
-#    'Topic :: Software Development :: Libraries :: Python Modules',
-#    'Topic :: Utilities',
-#    'Programming Language :: Python :: 3',
-#    'Programming Language :: Python :: 3.9',
-#    'Programming Language :: Python :: 3.10',
-#    'Programming Language :: Python :: 3.11',
-#    'Programming Language :: Python :: 3.12',
-#]
-
-[tool.poetry.dependencies]
-python = "^3.9"
-twisted = "^24.7.0"
-requests = "^2.32.3"
-fasteners = "^0.19"
-shapely = "^2.0.6"
-pyproj = "^3.6.1"
-psycopg2 = "^2.9.9"
-injector = "^0.22.0"
-
-[tool.poetry.group.dev.dependencies]
-assertpy = "^1.1"
-pytest = "^8.3.3"
-pytest-cov = "^5.0.0"
-pytest-benchmark = "^4.0.0"
-mock = "^5.1.0"
+homepage = 'https://github.com/wuan/bo-python'
+requires-python = ">=3.10"
+dependencies = [
+    "twisted (>=24.11.0,<25.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "fasteners (>=0.19,<0.20)",
+    "shapely (>=2.0.6,<3.0.0)",
+    "pyproj (>=3.7.0,<4.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)",
+    "injector (>=0.22.0,<0.23.0)"
+]
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[project.optional-dependencies]
-tests = [
-    'pytest-cov',
-    'pytest-benchmark',
-    'mock',
-    'assertpy',
-    'backports.zoneinfo; python_version < "3.9"',
-]
-
-[project.urls]
-homepage = 'https://github.com/wuan/bo-python'
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+pytest-benchmark = "^5.1.0"
+mock = "^5.1.0"
+assertpy = "^1.1"
