remove unused code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,9 @@ pytest-benchmark = "^5.1.0"
 mock = "^5.1.0"
 assertpy = "^1.1"
 pre-commit = "^4.1.0"
+mypy = "^1.15.0"
+types-setuptools = "^75.8.0.20250210"
+types-requests = "^2.32.0.20241016"
+types-psycopg2 = "^2.9.21.20250121"
+types-cffi = "^1.16.0.20241221"
+types-pyopenssl = "^24.1.0.20240722"
