--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -9,7 +9,7 @@ permissions:
 jobs:
   dependabot:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'wuan/mqtt-gateway'
+    if: github.event.pull_request.user.login == 'dependabot[bot]' && github.repository == 'wuan/bo-python'
     steps:
       - name: Dependabot metadata
         id: metadata
