--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
           poetry build
 
       - name: SonarCloud Scan
-        if: matrix.python-version == '3.10' && matrix.poetry-version == '1.7.1'
+        if: matrix.python-version == '3.12'
         uses: SonarSource/sonarqube-scan-action@v5.1.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
