--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = "Apache-2.0"
 homepage = 'https://github.com/wuan/bo-python'
-requires-python = ">=3.10"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "twisted (>=23.10.0,<24.0.0)",
     "requests (>=2.32.3,<3.0.0)",
@@ -29,3 +29,4 @@ pytest-cov = "^6.0.0"
 pytest-benchmark = "^5.1.0"
 mock = "^5.1.0"
 assertpy = "^1.1"
+testcontainers = {extras = ["postgres"], version = "^4.10.0"}
