add websocket import

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "psycopg2 (>=2.9.10,<3.0.0)",
     "injector (>=0.22.0,<0.23.0)",
     "incremental (==22.10.0)",
-    "stopit (>=1.1.2,<2.0.0)"
+    "stopit (>=1.1.2,<2.0.0)",
+    "websocket-client (>=1.9.0,<2.0.0)"
 ]
 
 [build-system]
@@ -27,6 +28,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 bo-db = "blitzortung.cli.db:main"
 bo-import = "blitzortung.cli.imprt:main"
+bo-import-websocket = "blitzortung.cli.imprt_websocket:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
