--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "stopit (>=1.1.2,<2.0.0)",
     "websocket-client (>=1.9.0,<2.0.0)",
     "psycopg2cffi (>=2.9.0,<3.0.0)",
+    "statsd (>=4.0.1,<5.0.0)",
 ]
 
 [build-system]
