--- a/pylint.rc
+++ b/pylint.rc
@@ -12,7 +12,7 @@ profile=no
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=CVS
+ignore=CVS,tests
 
 # Pickle collected data for later comparisons.
 persistent=yes
@@ -123,7 +123,7 @@ bad-names=foo,bar,baz,toto,tutu,tata
 
 # Regular expression which should only match functions or classes name which do
 # not require a docstring
-no-docstring-rgx=__.*__
+no-docstring-rgx=(__.*__|test_.*|Test.*)
 
 
 [FORMAT]
