--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
 [project.scripts]
 bo-db = "blitzortung.cli.db:main"
 bo-import = "blitzortung.cli.imprt:main"
+bo-import2 = "blitzortung.cli.imprt2:main"
 bo-import-websocket = "blitzortung.cli.imprt_websocket:main"
 bo-webservice = "blitzortung.cli.start_webservice:main"
 bo-webservice-insertlog = "blitzortung.cli.webservice_insertlog:main"
