--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = 'blitzortung'
-version = '1.11.26'
+version = '1.11.27'
 description = 'blitzortung.org python modules'
 authors = [
     {name = "Andreas Würl",email = "andi@tryb.de"}
@@ -29,7 +29,7 @@ dependencies = [
 [project.scripts]
 bo-db = "blitzortung.cli.db:main"
 bo-import = "blitzortung.cli.imprt:main"
-bo-import2 = "blitzortung.cli.imprt2:main"
+bo-update = "blitzortung.cli.update:main"
 bo-import-websocket = "blitzortung.cli.imprt_websocket:main"
 bo-webservice = "blitzortung.cli.start_webservice:main"
 bo-webservice-insertlog = "blitzortung.cli.webservice_insertlog:main"
