--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = 'blitzortung'
-version = '1.11.31'
+version = '1.11.32'
 description = 'blitzortung.org python modules'
 authors = [
     {name = "Andreas Würl",email = "andi@tryb.de"}
 ]
 license = "Apache-2.0"
 homepage = 'https://github.com/wuan/bo-python'
+readme = "README.md"
 requires-python = ">=3.11,<4.0"
 dependencies = [
     "twisted (>=25.5)",
